--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Soul Connect- Dog's need love</title>
         <link rel="stylesheet" href="../CSS/profile.css">
         <script src="../JS/main.js"></script>
     </head>
     <body>
         <main>
+            <nav>
+                <ul>
+                    <li><a href="./profile.html">Profile</a></li>
+                    <li><a href="#chats">Chats</a></li>
+                    <li><a href="#connect">Connect</a></li>
+                    <li><a href="#logout">Logout</a></li>
+                </ul>
+            </nav>
+            
             <section class="profile">
                 <h1 id="name">Bambi</h1>
                 <div class="bio">
@@ -45,6 +56,7 @@
         
         <footer class="footer">
             <p>This is our footer</p>
+            <p>@best pet shop in Africa</p>
         </footer>
     </body>
 </html> 
